src/toggl_api.h

    TOGGL_EXPORT bool_t toggl_set_settings_start_autotracker_while_timer_is_running(
        void* context,
        const bool_t start_autotracker_while_timer_is_running);
    TOGGL_EXPORT bool_t toggl_set_settings_active_tab(
        void *context,
        const uint8_t active_tab);
    TOGGL_EXPORT bool_t toggl_set_settings_color_theme(
        void *context,
        const uint8_t color_theme);
    // Redmine fork: persist the default TimeEntryActivity id for new entries.
    TOGGL_EXPORT bool_t toggl_set_settings_default_activity(
        void *context,
        const uint64_t activity_id);
    TOGGL_EXPORT bool_t toggl_set_settings_idle_minutes(
        void *context,
        const uint64_t idle_minutes);
    TOGGL_EXPORT bool_t toggl_set_settings_focus_on_shortcut(
        void *context,
        const bool_t focus_on_shortcut);
    TOGGL_EXPORT bool_t toggl_set_settings_reminder_minutes(
        void *context,
        const uint64_t reminder_minutes);
    TOGGL_EXPORT bool_t toggl_set_settings_pomodoro_minutes(
        void *context,
        const uint64_t pomodoro_minutes);
    TOGGL_EXPORT bool_t toggl_set_settings_pomodoro_break_minutes(
        void *context,
        const uint64_t pomodoro_break_minutes);
    TOGGL_EXPORT bool_t toggl_set_settings_manual_mode(
        void *context,
        const bool_t manual_mode);
    TOGGL_EXPORT bool_t toggl_set_proxy_settings(
        void *context,
        const bool_t use_proxy,
        const char_t *proxy_host,
        const uint64_t proxy_port,
        const char_t *proxy_username,
        const char_t *proxy_password);
    TOGGL_EXPORT bool_t toggl_set_window_settings(
        void *context,
        const int64_t window_x,
        const int64_t window_y,
        const int64_t window_height,
        const int64_t window_width);
    TOGGL_EXPORT bool_t toggl_window_settings(
        void *context,
        int64_t *window_x,
        int64_t *window_y,
        int64_t *window_height,
        int64_t *window_width);
    TOGGL_EXPORT void toggl_set_window_maximized(
        void *context,
        const bool_t value);
    TOGGL_EXPORT bool_t toggl_get_window_maximized(
        void *context);
    TOGGL_EXPORT void toggl_set_window_minimized(
        void *context,
        const bool_t value);
    TOGGL_EXPORT bool_t toggl_get_window_minimized(
        void *context);
    TOGGL_EXPORT void toggl_set_window_edit_size_height(
        void *context,
        const int64_t value);
    TOGGL_EXPORT int64_t toggl_get_window_edit_size_height(
        void *context);
    TOGGL_EXPORT void toggl_set_window_edit_size_width(
        void *context,
        const int64_t value);
    TOGGL_EXPORT int64_t toggl_get_window_edit_size_width(
        void *context);