app/lib/src/native/toggl_api_generated.dart


  late final _toggl_set_settings_start_autotracker_while_timer_is_runningPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_start_autotracker_while_timer_is_running');
  late final _toggl_set_settings_start_autotracker_while_timer_is_running =
      _toggl_set_settings_start_autotracker_while_timer_is_runningPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_active_tab(
    ffi.Pointer<ffi.Void> context,
    int active_tab,
  ) {
    return _toggl_set_settings_active_tab(context, active_tab);
  }

  late final _toggl_set_settings_active_tabPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint8)>
      >('toggl_set_settings_active_tab');
  late final _toggl_set_settings_active_tab = _toggl_set_settings_active_tabPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_color_theme(
    ffi.Pointer<ffi.Void> context,
    int color_theme,
  ) {
    return _toggl_set_settings_color_theme(context, color_theme);
  }

  late final _toggl_set_settings_color_themePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint8)>
      >('toggl_set_settings_color_theme');
  late final _toggl_set_settings_color_theme =
      _toggl_set_settings_color_themePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  /// Redmine fork: persist the default TimeEntryActivity id for new entries.
  int toggl_set_settings_default_activity(
    ffi.Pointer<ffi.Void> context,
    int activity_id,
  ) {
    return _toggl_set_settings_default_activity(context, activity_id);
  }

  late final _toggl_set_settings_default_activityPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_settings_default_activity');
  late final _toggl_set_settings_default_activity =
      _toggl_set_settings_default_activityPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_idle_minutes(
    ffi.Pointer<ffi.Void> context,
    int idle_minutes,
  ) {
    return _toggl_set_settings_idle_minutes(context, idle_minutes);
  }

  late final _toggl_set_settings_idle_minutesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_settings_idle_minutes');
  late final _toggl_set_settings_idle_minutes =
      _toggl_set_settings_idle_minutesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_focus_on_shortcut(
    ffi.Pointer<ffi.Void> context,
    int focus_on_shortcut,
  ) {
    return _toggl_set_settings_focus_on_shortcut(context, focus_on_shortcut);
  }

  late final _toggl_set_settings_focus_on_shortcutPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_focus_on_shortcut');
  late final _toggl_set_settings_focus_on_shortcut =
      _toggl_set_settings_focus_on_shortcutPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_reminder_minutes(
    ffi.Pointer<ffi.Void> context,
    int reminder_minutes,
  ) {
    return _toggl_set_settings_reminder_minutes(context, reminder_minutes);
  }

  late final _toggl_set_settings_reminder_minutesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_settings_reminder_minutes');
  late final _toggl_set_settings_reminder_minutes =
      _toggl_set_settings_reminder_minutesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_pomodoro_minutes(
    ffi.Pointer<ffi.Void> context,
    int pomodoro_minutes,
  ) {
    return _toggl_set_settings_pomodoro_minutes(context, pomodoro_minutes);
  }

  late final _toggl_set_settings_pomodoro_minutesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_settings_pomodoro_minutes');
  late final _toggl_set_settings_pomodoro_minutes =
      _toggl_set_settings_pomodoro_minutesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_pomodoro_break_minutes(
    ffi.Pointer<ffi.Void> context,
    int pomodoro_break_minutes,
  ) {
    return _toggl_set_settings_pomodoro_break_minutes(
      context,
      pomodoro_break_minutes,
    );
  }

  late final _toggl_set_settings_pomodoro_break_minutesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64)>
      >('toggl_set_settings_pomodoro_break_minutes');
  late final _toggl_set_settings_pomodoro_break_minutes =
      _toggl_set_settings_pomodoro_break_minutesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_manual_mode(
    ffi.Pointer<ffi.Void> context,
    int manual_mode,
  ) {
    return _toggl_set_settings_manual_mode(context, manual_mode);
  }

  late final _toggl_set_settings_manual_modePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_manual_mode');
  late final _toggl_set_settings_manual_mode =
      _toggl_set_settings_manual_modePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_proxy_settings(
    ffi.Pointer<ffi.Void> context,
    int use_proxy,
    ffi.Pointer<ffi.Char> proxy_host,
    int proxy_port,
    ffi.Pointer<ffi.Char> proxy_username,
    ffi.Pointer<ffi.Char> proxy_password,
  ) {
    return _toggl_set_proxy_settings(
      context,
      use_proxy,
      proxy_host,
      proxy_port,
      proxy_username,
      proxy_password,
    );
  }

  late final _toggl_set_proxy_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_proxy_settings');
  late final _toggl_set_proxy_settings = _toggl_set_proxy_settingsPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_window_settings(
    ffi.Pointer<ffi.Void> context,
    int window_x,
    int window_y,
    int window_height,
    int window_width,
  ) {
    return _toggl_set_window_settings(
      context,
      window_x,
      window_y,
      window_height,
      window_width,
    );
  }

  late final _toggl_set_window_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
          )
        >
      >('toggl_set_window_settings');
  late final _toggl_set_window_settings = _toggl_set_window_settingsPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int, int, int)>();

  int toggl_window_settings(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Int64> window_x,
    ffi.Pointer<ffi.Int64> window_y,
    ffi.Pointer<ffi.Int64> window_height,
    ffi.Pointer<ffi.Int64> window_width,
  ) {
    return _toggl_window_settings(
      context,
      window_x,
      window_y,
      window_height,
      window_width,
    );
  }

  late final _toggl_window_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('toggl_window_settings');
  late final _toggl_window_settings = _toggl_window_settingsPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>,
        )
      >();

  void toggl_set_window_maximized(ffi.Pointer<ffi.Void> context, int value) {
    return _toggl_set_window_maximized(context, value);
  }

  late final _toggl_set_window_maximizedPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_window_maximized');
  late final _toggl_set_window_maximized = _toggl_set_window_maximizedPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_get_window_maximized(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_window_maximized(context);
  }

  late final _toggl_get_window_maximizedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_window_maximized',
      );
  late final _toggl_get_window_maximized = _toggl_get_window_maximizedPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_window_minimized(ffi.Pointer<ffi.Void> context, int value) {
    return _toggl_set_window_minimized(context, value);
  }

  late final _toggl_set_window_minimizedPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_window_minimized');
  late final _toggl_set_window_minimized = _toggl_set_window_minimizedPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_get_window_minimized(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_window_minimized(context);
  }

  late final _toggl_get_window_minimizedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_window_minimized',
      );
  late final _toggl_get_window_minimized = _toggl_get_window_minimizedPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_window_edit_size_height(
    ffi.Pointer<ffi.Void> context,
    int value,
  ) {
    return _toggl_set_window_edit_size_height(context, value);
  }

  late final _toggl_set_window_edit_size_heightPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('toggl_set_window_edit_size_height');
  late final _toggl_set_window_edit_size_height =
      _toggl_set_window_edit_size_heightPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_get_window_edit_size_height(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_window_edit_size_height(context);
  }

  late final _toggl_get_window_edit_size_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_window_edit_size_height',
      );
  late final _toggl_get_window_edit_size_height =
      _toggl_get_window_edit_size_heightPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_window_edit_size_width(
    ffi.Pointer<ffi.Void> context,
    int value,
  ) {
    return _toggl_set_window_edit_size_width(context, value);
  }

  late final _toggl_set_window_edit_size_widthPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('toggl_set_window_edit_size_width');
  late final _toggl_set_window_edit_size_width =
      _toggl_set_window_edit_size_widthPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_get_window_edit_size_width(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_window_edit_size_width(context);
  }

  late final _toggl_get_window_edit_size_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_window_edit_size_width',
      );
  late final _toggl_get_window_edit_size_width =
      _toggl_get_window_edit_size_widthPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();
